@@ -9,6 +9,8 @@
   Src: ChildFrm.cpp
  PATCH: [ 1414196 ] Delete useless CChildFrame::OnNotify method
   Src: ChildFrm.cpp ChildFrm.h
+ PATCH: [ 1414199 ] Fix outdated comment on DirView.cpp :: NumToStr
+  Src: DirView.cpp
 
 2006-01-26 Kimmo
  PATCH: [ 1413230 ] Use HtmlHelp API to open help
